force-app/main/default/objects/HealthCloudGA__PatientCardViewConfiguration__c/HealthCloudGA__PatientCardViewConfiguration__c.object-meta.xml
<CustomObject>
    <label>Patient Card Configuration</label>
    <nameField>
        <label>Patient Card Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Card Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>