force-app/main/default/objects/HealthCloudGA__PatientCardViewConfiguration__c/fields/HealthCloudGA__FriendlyName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FriendlyName__c</fullName>
    <label>Friendly Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>