force-app/main/default/objects/HealthCloudGA__PatientCardViewConfiguration__c/fields/HealthCloudGA__Language__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chinese (Simplified)</fullName>
            </value>
            <value>
                <fullName>Chinese (Traditional)</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English (United Kingdom)</fullName>
            </value>
            <value>
                <fullName>English (United States)</fullName>
                <default>true</default>
                <label>English (United States)</label>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Portuguese (Brazil)</fullName>
            </value>
            <value>
                <fullName>Russian</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Spanish (Mexico)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>