force-app/main/default/objects/HealthCloudGA__PatientCardViewConfiguration__c/fields/HealthCloudGA__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>