force-app/main/default/objects/HealthCloudGA__PatientCardViewConfiguration__c/fields/HealthCloudGA__SortBy__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SortBy__c</fullName>
    <label>Sort By</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>